charts/nginx-ingress/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: nginx-test
            port:
              number: 80
      - path: /reports
        pathType: Prefix
        backend:
          service:
            name: report-service
            port:
              number: 80
      - path: /posts
        pathType: Prefix
        backend:
          service:
            name: post-service
            port:
              number: 80
      - path: /search
        pathType: Prefix
        backend:
          service:
            name: search-service
            port:
              number: 80
      - path: /quiz
        pathType: Prefix
        backend:
          service:
            name: mission-service
            port:
              number: 80
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 80
      - path: /member
        pathType: Prefix
        backend:
          service:
            name: member-service
            port:
              number: 80
      - path: /blog
        pathType: Prefix
        backend:
          service:
            name: blog-service
            port:
              number: 80
